--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "developer-portfolio",
-  "description": "Portfolio of Abu Said",
+  "description": "Portfolio of Hardik Saini",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -29,6 +29,7 @@
     "autoprefixer": "latest",
     "eslint": "latest",
     "eslint-config-next": "^16.0.1",
+    "pdf-parse": "^1.1.4",
     "postcss": "latest",
     "sass": "^1.69.5",
     "tailwindcss": "latest"
